--- a/src/main/resources/Styles/ClientMenu.css
+++ b/src/main/resources/Styles/ClientMenu.css
@@ -85,7 +85,7 @@
 .report_container Button {
     -fx-pref-widht: 80;
     -fx-background-color: #132A13;
-    -fx-fill: #FFFFFF;
+    -fx-text-fill: #FFFFFF;
 }
 
 .report_container Button:hover {
