--- a/src/main/resources/Fxml/Client/Dashboard.fxml
+++ b/src/main/resources/Fxml/Client/Dashboard.fxml
@@ -1,68 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Text?>
+<?import de.jensd.fx.glyphs.fontawesome.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="750.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mazebank.Controllers.Client.DashboardController">
-   <children>
-      <Text layoutX="59.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" AnchorPane.topAnchor="30.0" />
-      <Label text="Label" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="27.0" />
-      <Text layoutX="797.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Accounts Sammary" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="90.0" />
-      <Text layoutX="30.0" layoutY="147.0" strokeType="OUTSIDE" strokeWidth="0.0" text="My Accounts" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="90.0" />
-      <HBox layoutX="30.0" layoutY="140.0" prefHeight="180.0" prefWidth="620.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="120.0">
-         <children>
-            <AnchorPane prefHeight="150.0" prefWidth="295.0">
-               <children>
-                  <Label layoutX="24.0" layoutY="23.0" text="\$3 500.36" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="25.0" />
-                  <Label layoutX="24.0" layoutY="135.0" text="**** **** ****" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="14.0" />
-                  <Label layoutX="81.0" layoutY="118.0" text="4558" AnchorPane.bottomAnchor="47.0" AnchorPane.leftAnchor="138.0" />
-                  <VBox layoutX="228.0" layoutY="42.0" prefHeight="100.0" prefWidth="35.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="14.0" />
-                  <FontAwesomeIconView glyphName="BANK" layoutX="258.0" layoutY="30.0" size="30" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="7.0" />
-                  <Text layoutX="25.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Checking Account" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="150.0" prefWidth="295.0">
-               <children>
-                  <Label layoutX="24.0" layoutY="23.0" text="\$3 500.36" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="25.0" />
-                  <Label layoutX="24.0" layoutY="135.0" text="**** **** ****" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="14.0" />
-                  <Label layoutX="81.0" layoutY="118.0" text="4558" AnchorPane.bottomAnchor="47.0" AnchorPane.leftAnchor="138.0" />
-                  <VBox layoutX="228.0" layoutY="42.0" prefHeight="100.0" prefWidth="35.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="14.0" />
-                  <FontAwesomeIconView glyphName="BANK" layoutX="258.0" layoutY="30.0" size="30" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="7.0" />
-                  <Text layoutX="25.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Savings Account" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0" />
-               </children>
-            </AnchorPane>
-         </children>
-      </HBox>
-      <VBox layoutX="640.0" layoutY="120.0" prefHeight="180.0" prefWidth="210.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="120.0">
-         <children>
-            <VBox prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Income" />
-                  <Label text="+ $ 4000.00" />
-                  <Line endX="160.0" />
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Expencec" />
-                  <Label text="- $ 1500.00" />
-               </children>
-            </VBox>
-         </children>
+<AnchorPane prefHeight="750.0" prefWidth="850.0" styleClass="dashboard" stylesheets="@../../Styles/Dashboard.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mazebank.Controllers.Client.DashboardController">
+   <Text fx:id="user_name" layoutX="20.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="user_name" text="Hi, Ihor" AnchorPane.topAnchor="28.599998474121094" />
+   <Label styleClass="date_lbl" text="Today, 26.01.2024" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="27.0" />
+   <Text fx:id="login_date" layoutX="797.0" layoutY="121.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="section_title" text="Accounts Sammary" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="90.0" />
+   <Text layoutX="30.0" layoutY="147.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="section_title" text="My Accounts" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="90.0" />
+   <HBox layoutX="30.0" layoutY="140.0" prefHeight="180.0" prefWidth="620.0" styleClass="accounts_view" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="120.0">
+      <AnchorPane prefHeight="150.0" prefWidth="295.0">
+         <Label fx:id="checking_bal" layoutX="24.0" layoutY="23.0" styleClass="account_balance" text="\$3 500.36" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="25.0" />
+         <Label layoutX="24.0" layoutY="135.0" styleClass="account_number" text="**** **** ****" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="14.0" />
+         <Label fx:id="checking_acc_num" layoutX="81.0" layoutY="118.0" styleClass="account_number" text="4558" AnchorPane.bottomAnchor="47.0" AnchorPane.leftAnchor="138.0" />
+         <VBox layoutX="228.0" layoutY="42.0" prefHeight="100.0" prefWidth="35.0" styleClass="VBox" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="14.0" />
+         <FontAwesomeIconView glyphName="BANK" layoutX="258.0" layoutY="30.0" size="30" text="" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="7.0" />
+         <Text layoutX="25.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Checking Account" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0" />
+         <styleClass>
+            <String fx:value="account" />
+            <String fx:value="account_gradient" />
+         </styleClass>
+      </AnchorPane>
+      <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="150.0" prefWidth="295.0">
+         <Label fx:id="savings_bal" layoutX="24.0" layoutY="23.0" styleClass="account_balance" text="\$3 500.36" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="25.0" />
+         <Label layoutX="24.0" layoutY="135.0" styleClass="account_number" text="**** **** ****" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="14.0" />
+         <Label fx:id="savings_acc_number" layoutX="81.0" layoutY="118.0" styleClass="account_number" text="4558" AnchorPane.bottomAnchor="47.0" AnchorPane.leftAnchor="138.0" />
+         <VBox layoutX="228.0" layoutY="42.0" prefHeight="100.0" prefWidth="35.0" styleClass="VBox" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="14.0" />
+         <FontAwesomeIconView glyphName="BANK" layoutX="258.0" layoutY="30.0" size="30" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="7.0" />
+         <Text layoutX="25.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Savings Account" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0" />
+         <styleClass>
+            <String fx:value="account" />
+            <String fx:value="account_gradient" />
+         </styleClass>
+      </AnchorPane>
+   </HBox>
+   <VBox layoutX="640.0" layoutY="120.0" prefHeight="180.0" prefWidth="210.0" styleClass="summary_view" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="120.0">
+      <VBox prefHeight="200.0" prefWidth="100.0" styleClass="acc_summary_container">
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Income" />
+         <Label fx:id="income_lbl" styleClass="income_amount" text="+ $ 4000.00" />
+         <Line endX="160.0" />
+         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Expenses" />
+         <Label fx:id="expense_lbl" styleClass="expanse_amount" text="- $ 1500.00" />
       </VBox>
-      <Text layoutX="36.0" layoutY="388.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Latest Transaction" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="340.0" />
-      <Text layoutX="734.0" layoutY="344.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Send Money" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="340.0" />
-      <ListView layoutX="20.0" layoutY="456.0" prefHeight="365.0" prefWidth="570.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="20.0" />
-      <VBox layoutX="607.0" layoutY="427.0" prefHeight="366.0" prefWidth="240.0" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0">
-         <children>
-            <Label text="Payee Address" />
-            <TextField />
-            <Label text="Amoint in $:" />
-         </children>
-      </VBox>
-   </children>
+   </VBox>
+   <Text layoutX="36.0" layoutY="388.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="section_title" text="Latest Transaction" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="340.0" />
+   <Text layoutX="734.0" layoutY="344.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="section_title" text="Send Money" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="340.0" />
+   <ListView fx:id="transaction_listview" layoutX="20.0" layoutY="456.0" prefHeight="365.0" prefWidth="570.0" styleClass="transaction_listview" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="20.0" />
+   <VBox layoutX="607.0" layoutY="427.0" prefHeight="366.0" prefWidth="240.0" styleClass="new_trans_container" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0">
+      <Label text="Payee Address" />
+      <TextField fx:id="peyee_fld" />
+      <Label text="Amount in $:" />
+      <TextField fx:id="amount_fld" />
+      <Label text="Massage (Optional)" />
+      <TextArea fx:id="massage_fld" prefHeight="70.0" prefWidth="200.0" />
+      <Button fx:id="send_money_btm" mnemonicParsing="false" text="Send Money" />
+   </VBox>
 </AnchorPane>
